--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 	<properties>
 		<java.version>21</java.version>
 		<jakarta-validation.version>3.1.1</jakarta-validation.version>
+		<openfeign.version>4.2.0</openfeign.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -28,9 +29,13 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
-			<version>4.2.0</version>
+			<version>${openfeign.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>jakarta.validation</groupId>
