--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<java.version>21</java.version>
 		<jakarta-validation.version>3.1.1</jakarta-validation.version>
 		<openfeign.version>4.2.0</openfeign.version>
+		<swagger.version>2.8.5</swagger.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -42,7 +43,11 @@
 			<artifactId>jakarta.validation-api</artifactId>
 			<version>${jakarta-validation.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>${swagger.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
