--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,14 @@ spring:
     hibernate:
       ddl-auto: update
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info, metrics, loggers, env, configprops, beans
+  endpoint:
+    health:
+      show-details: always
 
 logging:
   level:
