--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<jakarta-validation.version>3.1.1</jakarta-validation.version>
 		<openfeign.version>4.2.0</openfeign.version>
 		<swagger.version>2.8.5</swagger.version>
+		<h2.version>2.3.232</h2.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -71,7 +72,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>2.3.232</version>
+			<version>${h2.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
